# readme

./: .gitignore  LICENSE  README.md  cached-combined.json  cached-dialogues.xml  chunk.txt  debug.txt  epub_in.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  result-0.json  test_dialogues.xml
cache/: anthropic-response-20582a13523d8d8f7d7b02ed4cce0a14e13bcc1b95c8c4369fbc5ee59fe902a0.txt  anthropic-response-2541cea6794147b64ef5fe7e29e144dc8e2d61d7e619b94bbaedd325a2259f58.txt  anthropic-response-4af4369187f1d04af5fbb7dcf87951c20360589bd5be18aea2350ba3e8d2aace.txt  anthropic-response-4b6e8ca491af1d25d47bf3af372d408290bc0e9591ca46afe370876792a27d72.txt  anthropic-response-6c6c154913a3f4fc56c063c2b58c9633b77991c77b3c774e827c66b67ca91bd4.txt  anthropic-response-6f4a53c4f1dd24bd3a2b5633198b0e554712065648f6dbb35ae223af99d7de5c.txt  anthropic-response-951af218bf6bf6baf23374921a30c2cbbba15411473d59075e4bfe31563f0043.txt  anthropic-response-c3cb31243ac4fef01d0319a7626e9b3d5e0a8d7ced13b5272a74c15858f0f30b.txt  anthropic-response-c9a5cc0991cdb395e3b50f2a228206d00bb8e9713b683108145eb84179ef262f.txt  anthropic-response-df0f104ee40a217e00102febba8a7f28da0d54b4aad06822fd25b306be26d0a2.txt  result-0.json  result-1.json  result-2.json  result-3.json  result-4.json
src/: audio.ts  audio_gen.py  epubReader.ts  epub_reader.py  index.ts  main.py  tag_dialogues.py  test.ts  test_kokoro.py
tests/: test_dialogues.py  test_epub_reader.py  test_main.py
tests/fixtures/: chunk_in.txt  dialogues.json  expected.json  in.txt  out.txt
